# Haskell-Order-Book

./: .gitignore  README.md  orderbook.cabal
benchmark/: Bench.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: orderbook-0.1.0.0-inplace.conf  package.cache
src/OrderBook/: Book.hs  Matching.hs  Types.hs
tests/: MinimalSpec.hs  PerformanceSpec.hs  Spec.hs
