cabal-version:       2.4
name:                orderbook
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     OrderBook.Types
                     , OrderBook.Book
                     , OrderBook.Matching
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-patterns
  build-depends:       base >=4.14 && <5
                     , containers
                     , time

test-suite orderbook-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-patterns
  build-depends:       base
                     , orderbook
                     , tasty
                     , tasty-quickcheck
                     , QuickCheck

benchmark orderbook-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Bench.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  build-depends:       base
                     , orderbook
                     , criterion
                     , random
